arreglo de detalles de estilos

--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -1069,3 +1069,8 @@
 .btn-pink {
     background: $pink;
 }
+.btn-actual{
+    width: 197px;
+    height: 40px;  
+    transform: translate(-8px, -72px);
+}
