--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -585,6 +585,12 @@
 }
 
 
+.label-footer-main-image {
+    .add-photo {
+        width: 80px;
+    }
+}
+
 .label-footer {
     .add-photo {
         width: 25px;
@@ -601,4 +607,14 @@
     .add-photo {
         width: 37px;
     }
+}
+
+
+.mask-white {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: white;
+    opacity: 0.5;
 }
