para el modal de home

--- a/resources/sass/atoms/_spacings.scss
+++ b/resources/sass/atoms/_spacings.scss
@@ -349,3 +349,9 @@
 .height-btn{
     height: 44px;
 }
+.shadowblack{
+    width: 785px;
+  height: 218px;
+  background: linear-gradient(180deg, black, white);
+  z-index: 1;
+}
