--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4724,6 +4724,13 @@ div .bootstrap-select > .dropdown-toggle:focus {
   height: 44px;
 }
 
+.shadowblack {
+  width: 785px;
+  height: 218px;
+  background: linear-gradient(180deg, black, white);
+  z-index: 1;
+}
+
 @font-face {
   font-family: "Montserrat-Light";
   src: url(/backoffice/public/fonts/Montserrat-Light/Montserrat-Light.eot);
@@ -6389,6 +6396,23 @@ ul {
 }
 
 .programming-slider-dots1 .slick-dots li {
+  height: 37px;
+  width: 37px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
+.programming-slider-dots-home .slick-dots {
+  position: static;
+  text-align: left;
+  bottom: auto;
+}
+
+.programming-slider-dots-home .presentation {
+  margin-right: 24px;
+}
+
+.programming-slider-dots-home .slick-dots li {
   height: 37px;
   width: 37px;
   margin-right: 16px;
@@ -8196,6 +8220,36 @@ select:focus {
   width: 1191px !important;
 }
 
+.programming-slider-dots-home .slick-dots .slick-active {
+  background-color: #0097a9;
+}
+
+.programming-slider-dots-home .slick-dots .slick-active::after {
+  content: "";
+  border-width: 6px;
+  border-style: solid;
+  border-color: #4a4a4a transparent transparent transparent;
+  position: absolute;
+  left: 36%;
+  bottom: -12px;
+  transform: rotate(180deg);
+}
+
+.programming-slider-dots-home .slick-dots .slick-active::before {
+  content: "";
+  border-width: 6px;
+  border-style: solid;
+  border-color: #4a4a4a transparent transparent transparent;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%, -95%);
+}
+
+.programming-slider-dots-home .slick-dots .slick-active p {
+  color: #ffffff !important;
+}
+
 .programming-slider-dots1 .slick-dots .slick-active {
   background-color: #0097a9;
 }
@@ -8232,6 +8286,11 @@ select:focus {
 
 .calendar-slider div {
   height: 100%;
+}
+
+.programming-slider-home {
+  width: 787px !important;
+  height: 471px !important;
 }
 
 .programming-slider .slick-slide,
