--- a/resources/sass/molecules/_lists.scss
+++ b/resources/sass/molecules/_lists.scss
@@ -417,6 +417,24 @@ ul {
         margin-bottom: 16px;
     }
 }
+.programming-slider-dots-home {
+    .slick-dots {
+        position: static;
+        text-align: left;
+        bottom: auto;
+    }
+
+    .presentation {
+        margin-right: 24px;
+    }
+
+    .slick-dots li {
+        height: 37px;
+        width: 37px;
+        margin-right: 16px;
+        margin-bottom: 16px;
+    }
+}
 
 .carrusel1-slider-dots1 {
     .slick-dots {
