--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -84,6 +84,40 @@
 .programming-slider-sinopsis {
     width: 1191px !important;
 }
+.programming-slider-dots-home {
+    .slick-dots {
+        .slick-active {
+            background-color: $teal;
+        }
+
+        .slick-active::after {
+            content: "";
+            border-width: 6px;
+            border-style: solid;
+            border-color: #4a4a4a transparent transparent transparent;
+            position: absolute;
+            left: 36%;
+            bottom: -12px;
+            transform: rotate(180deg);
+        }
+
+        .slick-active::before {
+            content: "";
+            border-width: 6px;
+            border-style: solid;
+            border-color: $greyishBrownTwo transparent transparent transparent;
+            position: absolute;
+            left: 50%;
+            top: 0;
+            -webkit-transform: translate(-50%, 100%);
+            transform: translate(-50%, -95%);
+        }
+
+        .slick-active p {
+            color: $white !important;
+        }
+    }
+}
 
 .programming-slider-dots1 {
     .slick-dots {
@@ -130,6 +164,10 @@
     }
 }
 
+.programming-slider-home{
+    width: 787px !important;
+  height: 471px !important;
+}
 .programming-slider,
 .programming-slider-concert-channel {
     .slick-slide {
