funcionalidad de subir imágenes de celular del home al backoffice completa

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,6 +28,7 @@ $slick-loader-path: "~slick-carousel/slick/"; // To add
 @import "./organisms/header";
 @import "./organisms/parts";
 @import "./organisms/section";
+@import "./organisms/menu";
 @import "./helpers/cursor";
 @import "./helpers/spacing";
 @import "./helpers/shadows";
