--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,7 +71,7 @@ body {
   display: none;
 }
 
-[dir=rtl] .slick-slide {
+[dir="rtl"] .slick-slide {
   float: right;
 }
 
@@ -177,7 +177,7 @@ body {
   left: -25px;
 }
 
-[dir=rtl] .slick-prev {
+[dir="rtl"] .slick-prev {
   left: auto;
   right: -25px;
 }
@@ -186,7 +186,7 @@ body {
   content: "\2190";
 }
 
-[dir=rtl] .slick-prev:before {
+[dir="rtl"] .slick-prev:before {
   content: "\2192";
 }
 
@@ -194,7 +194,7 @@ body {
   right: -25px;
 }
 
-[dir=rtl] .slick-next {
+[dir="rtl"] .slick-next {
   left: -25px;
   right: auto;
 }
@@ -203,7 +203,7 @@ body {
   content: "\2192";
 }
 
-[dir=rtl] .slick-next:before {
+[dir="rtl"] .slick-next:before {
   content: "\2190";
 }
 
@@ -3335,23 +3335,23 @@ body {
   letter-spacing: normal;
 }
 
-input[type=radio]:checked + .a-btn-check:before {
+input[type="radio"]:checked + .a-btn-check:before {
   content: "\2713";
   font-size: 30px;
   color: #009245;
 }
 
-input[type=radio]:checked + .hombre-estilo {
+input[type="radio"]:checked + .hombre-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type=checkbox] {
+input[type="checkbox"] {
   display: none;
 }
 
-input[type=radio] {
+input[type="radio"] {
   display: none;
 }
 
@@ -3388,13 +3388,13 @@ option:checked + .roles {
   border: none;
 }
 
-input[type=radio]:checked + .mujer-estilo {
+input[type="radio"]:checked + .mujer-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type=radio]:checked + .mujer-estilo1 {
+input[type="radio"]:checked + .mujer-estilo1 {
   background: #03ad50;
   color: #ffffff;
   border: none;
@@ -3411,7 +3411,7 @@ input[type="radio"]:checked + .no-estilo {
     border: none;
 }*/
 
-input[type=radio]:checked + .switch-label {
+input[type="radio"]:checked + .switch-label {
   background-color: #0097a9;
   color: #ffffff;
   border: none;
@@ -3422,13 +3422,13 @@ input[type=radio]:checked + .switch-label {
   font-family: "Montserrat-SemiBold";
 }
 
-input[type=radio]:checked + .si-estilo1 {
+input[type="radio"]:checked + .si-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
 }
 
-input[type=radio]:checked + .no-estilo1 {
+input[type="radio"]:checked + .no-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
@@ -3889,7 +3889,7 @@ input[type=radio]:checked + .no-estilo1 {
   cursor: pointer;
 }
 
-.list1:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.list1:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -3988,7 +3988,7 @@ div .bootstrap-select > .dropdown-toggle:focus {
   box-sizing: border-box;
 }
 
-.listcinema:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.listcinema:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -4530,8 +4530,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .veri {
   /*display: none;
-  position: absolute;
-  top: -172px;*/
+    position: absolute;
+    top: -172px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4547,8 +4547,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .edita {
   /*display: none;
-  position: absolute;
-  top: 32px;*/
+    position: absolute;
+    top: 32px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4564,8 +4564,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .borra {
   /*display: none;
-  position: absolute;
-  top: 66px;*/
+    position: absolute;
+    top: 66px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -7110,7 +7110,7 @@ a:hover {
   border-radius: 7px;
   padding: 7px 15px;
   display: inline;
-  opacity: 0.8;
+  opacity: .8;
 }
 
 .ipt-home-canales {
@@ -7714,6 +7714,11 @@ iframe {
   width: 163px;
 }
 
+.home-slider-container {
+  width: 787px;
+  height: 471px;
+}
+
 @font-face {
   font-family: "Montserrat-Light";
   src: url(/backoffice/public/fonts/Montserrat-Light/Montserrat-Light.eot);
@@ -8089,6 +8094,19 @@ select:focus {
   color: #ffffff;
   width: 100%;
   box-shadow: 1px 0px 2px 1px #d8d8d8;
+}
+
+.menu-mobile {
+  height: 218px;
+  background-image: linear-gradient(to bottom, #000000, rgba(0, 0, 0, 0));
+  z-index: 1;
+  width: 100%;
+  position: absolute;
+  padding: 24px;
+}
+
+.menu-mobile .menu-mobile__logo {
+  width: 126px;
 }
 
 .pointer-none {
