--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -402,13 +402,11 @@ iframe {
 }
 
 .container-promo {
-
     border-radius: 12px;
     background-color: $cobait;
 }
 
 .container-image-synopsis {
-
     border-radius: 12px;
     background-color: $black-three;
 }
@@ -421,7 +419,6 @@ iframe {
 .container-edit-sinopsis {
     width: 824px;
     height: 461px;
-
 }
 
 .container-edit-title-sinopsis {
@@ -436,11 +433,9 @@ iframe {
     width: 100%;
     height: 85%;
     outline: none !important;
-
 }
 
 .container-promo-cinema {
-
     border-radius: 12px;
     background-color: $off-yellow;
 }
@@ -450,12 +445,10 @@ iframe {
     border: $light-gold;
     box-shadow: 0 2px 4px 0 $black-two;
     padding-left: 10px;
-
 }
 
 .container-promotitle {
     background-color: $cobait;
-
 }
 
 .container-title {
@@ -519,8 +512,11 @@ iframe {
     display: none;
 }
 
-
 .menu-item-container {
     width: 163px;
+}
 
+.home-slider-container {
+    width: 787px;
+    height: 471px;
 }
