--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -1074,3 +1074,7 @@
     height: 40px;  
     transform: translate(-8px, -72px);
 }
+.btn-calendar{
+    height: 40px;
+    border-radius: 10px;
+}
