arreglos del landing de programaciion ene l menu principal, y arreglos de landing de home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6596,6 +6596,13 @@ ul {
   transition: all 0.6s ease;
 }
 
+.dropdown-item.active,
+.dropdown-item:active {
+  color: black !important;
+  text-decoration: none;
+  background-color: #007bff;
+}
+
 .navbar-progra-item-border {
   border-right: 2px solid #979797;
 }
