arreglos de estilos en tablas y en seleccion de imagenes en banners

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@ body {
 $slick-font-path: "~slick-carousel/slick/fonts/"; // To add
 $slick-loader-path: "~slick-carousel/slick/"; // To add
 @import "~slick-carousel/slick/slick";
-@import "~slick-carousel/slick/slick-theme";
+@import "slick-carousel/slick/slick-theme";
 @import "./base/color";
 @import "./base/config";
 @import "./atoms/button";
