--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1841,6 +1841,14 @@ body {
   border: 1px solid #15b643;
 }
 
+.btn-apro span {
+  font-family: "Montserrat-Bold";
+}
+
+.btn-recha span {
+  font-family: "Montserrat-Bold";
+}
+
 .btn-recha {
   width: 181px;
   height: 46px;
@@ -3344,7 +3352,7 @@ input[type=radio]:checked + .a-btn-check:before {
 input[type=radio]:checked + .hombre-estilo {
   background: #03ad50;
   color: #ffffff;
-  font-weight: bold;
+  font-family: "Montserrat-Bold";
   border: none;
 }
 
@@ -3392,14 +3400,14 @@ option:checked + .roles {
 input[type=radio]:checked + .mujer-estilo {
   background: #03ad50;
   color: #ffffff;
-  font-weight: bold;
+  font-family: "Montserrat-Bold";
   border: none;
 }
 
 input[type=radio]:checked + .mujer-estilo1 {
   background: #03ad50;
   color: #ffffff;
-  font-weight: bold;
+  font-family: "Montserrat-Bold";
   border: none;
 }
 
