editar sub titulos de canal claro

--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -211,6 +211,14 @@
     //.a-text-grilla
 }
 
+.btn-apro span {
+    font-family: $MontserratBold;
+}
+
+.btn-recha span {
+    font-family: $MontserratBold;
+}
+
 .btn-recha {
     width: 181px;
     height: 46px;
