--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -51,8 +51,8 @@ input[type="radio"]:checked+.a-btn-check:before {
 
 input[type="radio"]:checked+.hombre-estilo {
     background: $lemongreen;
-    // color: $white;
-    color: $black;
+    color: $white;
+    font-family: $MontserratBold;
     border: none;
 }
 
@@ -99,15 +99,15 @@ option:checked+.roles {
 
 input[type="radio"]:checked+.mujer-estilo {
     background: $lemongreen;
-    // color: $white;
-    color: $black;
+    color: $white;
+    font-family: $MontserratBold;
     border: none;
 }
 
 input[type="radio"]:checked+.mujer-estilo1 {
     background: $lemongreen;
-    // color: $white;
-    color: $black;
+    color: $white;
+    font-family: $MontserratBold;
     border: none;
 }
 
